🔧 fix scrollbar for mozilla

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,30 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  --black: #000000;
+  --ash-black: #222;
+  --white: #fafafa;
+  --sky: #00ccff;
+  --green: #22dddd;
+  --blue: #1300ff;
+  --dusk: #6600ff;
+  --purple: #9900ff;
+  --pink: #ff0066;
+  --red: #fe0222;
+  --orange: #fd7702;
+  --yellow: #ffbb00;
+
+  --background: var(--white);
+  --accent: var(--blue);
+
+  margin: 0;
+  padding: 0;
+  background-color: var(--background);
+  color: var(--accent);
+}
+
+/* WebKit-based browsers */
 ::-webkit-scrollbar {
   height: 10px;
   width: 8px;
@@ -18,4 +42,10 @@
 
 ::-webkit-scrollbar-corner {
   background: #000;
+}
+
+/* Mozilla Firefox */
+* {
+  scrollbar-width: 8px;
+  scrollbar-color: #2c2c2c #000;
 }
